feat: 테스트셋 평가

--- a/Classification_BERT.ipynb
+++ b/Classification_BERT.ipynb
@@ -2277,6 +2277,84 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 테스트셋 평가"
+      ],
+      "metadata": {
+        "id": "HK95zQMGYHi0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#시작 시간 설정\n",
+        "t0 = time.time()\n",
+        "\n",
+        "# 평가모드로 변경\n",
+        "model.eval()\n",
+        "\n",
+        "# 변수 초기화\n",
+        "eval_loss, eval_accuracy = 0, 0\n",
+        "nb_eval_steps, nb_eval_examples = 0, 0\n",
+        "\n",
+        "# 데이터로더에서 배치만큼 반복하여 가져옴\n",
+        "for step, batch in enumerate(test_dataloader):\n",
+        "    # 경과 정보 표시\n",
+        "    if step % 100 == 0 and not step == 0:\n",
+        "        elapsed = format_time(time.time() - t0)\n",
+        "        print('  Batch {:>5,}  of  {:>5,}.    Elapsed: {:}.'.format(step, len(test_dataloader), elapsed))\n",
+        "\n",
+        "    # 배치를 GPU에 넣음\n",
+        "    batch = tuple(t.to(device) for t in batch)\n",
+        "\n",
+        "    # 배치에서 데이터 추출\n",
+        "    b_input_ids, b_input_mask, b_labels = batch\n",
+        "\n",
+        "    # 그래디언트 계산 안함\n",
+        "    with torch.no_grad():\n",
+        "        # Forward 수행\n",
+        "        outputs = model(b_input_ids,\n",
+        "                        token_type_ids=None,\n",
+        "                        attention_mask=b_input_mask)\n",
+        "\n",
+        "    # 로스 구함\n",
+        "    logits = outputs[0]\n",
+        "\n",
+        "    # CPU로 데이터 이동\n",
+        "    logits = logits.detach().cpu().numpy()\n",
+        "    label_ids = b_labels.to('cpu').numpy()\n",
+        "\n",
+        "    # 출력 로짓과 라벨을 비교하여 정확도 계산\n",
+        "    tmp_eval_accuracy = flat_accuracy(logits, label_ids)\n",
+        "    eval_accuracy += tmp_eval_accuracy\n",
+        "    nb_eval_steps += 1\n",
+        "\n",
+        "print(\"\")\n",
+        "print(\"Accuracy: {0:.2f}\".format(eval_accuracy/nb_eval_steps))\n",
+        "print(\"Test took: {:}\".format(format_time(time.time() - t0)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GPArDwAFYHoQ",
+        "outputId": "38c4bf92-b95a-4632-b282-a8851b7ea2be"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Accuracy: 0.86\n",
+            "Test took: 0:00:19\n"
+          ]
+        }
+      ]
     }
   ]
 }
