feat: 새로운 문장 학습 모델로 테스트 진행

--- a/Classification_BERT.ipynb
+++ b/Classification_BERT.ipynb
@@ -2355,6 +2355,181 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 새로운 문장 테스트"
+      ],
+      "metadata": {
+        "id": "cv9sXaYfYq_u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 입력 데이터 변환\n",
+        "def convert_input_data(sentences):\n",
+        "\n",
+        "    # BERT의 토크나이저로 문장을 토큰으로 분리\n",
+        "    tokenized_texts = [tokenizer.tokenize(sent) for sent in sentences]\n",
+        "\n",
+        "    # 입력 토큰의 최대 시퀀스 길이\n",
+        "    MAX_LEN = 128\n",
+        "\n",
+        "    # 토큰을 숫자 인덱스로 변환\n",
+        "    input_ids = [tokenizer.convert_tokens_to_ids(x) for x in tokenized_texts]\n",
+        "\n",
+        "    # 문장을 MAX_LEN 길이에 맞게 자르고, 모자란 부분을 패딩 0으로 채움\n",
+        "    input_ids = pad_sequences(input_ids, maxlen=MAX_LEN, dtype=\"long\", truncating=\"post\", padding=\"post\")\n",
+        "\n",
+        "    # 어텐션 마스크 초기화\n",
+        "    attention_masks = []\n",
+        "\n",
+        "    # 어텐션 마스크를 패딩이 아니면 1, 패딩이면 0으로 설정\n",
+        "    # 패딩 부분은 BERT 모델에서 어텐션을 수행하지 않아 속도 향상\n",
+        "    for seq in input_ids:\n",
+        "        seq_mask = [float(i>0) for i in seq]\n",
+        "        attention_masks.append(seq_mask)\n",
+        "\n",
+        "    # 데이터를 파이토치의 텐서로 변환\n",
+        "    inputs = torch.tensor(input_ids)\n",
+        "    masks = torch.tensor(attention_masks)\n",
+        "\n",
+        "    return inputs, masks"
+      ],
+      "metadata": {
+        "id": "fcjgNlrFYrFs"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문장 테스트\n",
+        "def test_sentences(sentences):\n",
+        "\n",
+        "    # 평가모드로 변경\n",
+        "    model.eval()\n",
+        "\n",
+        "    # 문장을 입력 데이터로 변환\n",
+        "    inputs, masks = convert_input_data(sentences)\n",
+        "\n",
+        "    # 데이터를 GPU에 넣음\n",
+        "    b_input_ids = inputs.to(device)\n",
+        "    b_input_mask = masks.to(device)\n",
+        "\n",
+        "    # 그래디언트 계산 안함\n",
+        "    with torch.no_grad():\n",
+        "        # Forward 수행\n",
+        "        outputs = model(b_input_ids,\n",
+        "                        token_type_ids=None,\n",
+        "                        attention_mask=b_input_mask)\n",
+        "\n",
+        "    # 로스 구함\n",
+        "    logits = outputs[0]\n",
+        "\n",
+        "    # CPU로 데이터 이동\n",
+        "    logits = logits.detach().cpu().numpy()\n",
+        "\n",
+        "    return logits"
+      ],
+      "metadata": {
+        "id": "K175n0oNYrK1"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = test_sentences(['더 나은 학교생활 하고 싶어'])\n",
+        "print(logits)\n",
+        "\n",
+        "if np.argmax(logits) == 1 :\n",
+        "    print(\"연애 관련 대화\")\n",
+        "elif np.argmax(logits) == 0 :\n",
+        "    print(\"일상 대화\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OIPqZseLYrM4",
+        "outputId": "656476a6-26f4-45f1-d3c6-3d3514c68d99"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2.05549   -2.4554732]]\n",
+            "일상 대화\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = test_sentences(['저녁 뭘 먹을지 추천해줘'])\n",
+        "\n",
+        "print(logits)\n",
+        "if np.argmax(logits) == 1 :\n",
+        "    print(\"연애 관련 대화\")\n",
+        "elif np.argmax(logits) == 0 :\n",
+        "    print(\"일상 대화\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "41Efo0P4YvyY",
+        "outputId": "5d08339b-40c8-4af6-91a2-2dccdcea2630"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1.3156348 -1.4272876]]\n",
+            "일상 대화\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = test_sentences(['여자친구는 뭐를 좋아할까?'])\n",
+        "\n",
+        "print(logits)\n",
+        "if np.argmax(logits) == 1 :\n",
+        "    print(\"연애 관련 대화\")\n",
+        "elif np.argmax(logits) == 0 :\n",
+        "    print(\"일상 대화\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ue0DPC0yYxNb",
+        "outputId": "d22224d7-20f2-450e-e786-c6ad38d34040"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.2435904  1.6150533]]\n",
+            "연애 관련 대화\n"
+          ]
+        }
+      ]
     }
   ]
 }
