feat: 코드 주석 처리 변경

--- a/NLP using Pytorch/02_NLP_Technology.ipynb
+++ b/NLP using Pytorch/02_NLP_Technology.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 텍스트 토큰화"
+        "## 코드 2-1. 텍스트 토큰화"
       ],
       "metadata": {
         "id": "2AO_VcOU9Svu"
@@ -25,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "48jiBj068--7",
-        "outputId": "ab1a4c7c-9519-422e-bf20-9324fffce458"
+        "outputId": "a3c59132-28d9-44e8-b139-c0c42bc96f12"
       },
       "outputs": [
         {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LBNG5Z-19RyE",
-        "outputId": "2cf57cae-95a7-4a67-af1b-97e73da0aef6"
+        "outputId": "7cb6fd2d-6794-44be-9796-a3661824438c"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# n-그램 (유니그램, 바이그램, 트라이그램...)"
+        "## 코드 2-2. 텍스트에서 n-그램 만들기\n",
+        "### n-그램 (유니그램, 바이그램, 트라이그램...)"
       ],
       "metadata": {
         "id": "9F5ACfdS_VPR"
@@ -89,8 +90,17 @@
       "cell_type": "code",
       "source": [
         "def n_grams(text, n):\n",
-        "       return [text[i:i+n] for i in range(len(text) - n + 1)]\n",
-        "\n",
+        "       return [text[i:i+n] for i in range(len(text) - n + 1)]"
+      ],
+      "metadata": {
+        "id": "R_g3vBBDI27U"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "cleaned = ['mary', ',', \"n't\", 'slap', 'gree', 'witch', '.']\n",
         "print(n_grams(cleaned, 3))"
       ],
@@ -99,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IxdIs5rN98i3",
-        "outputId": "191cec48-c4b9-40bd-8a47-b9a05efcedf7"
+        "outputId": "9e6c250d-738b-4032-b5cc-d2ee6e8e5f6d"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,8 +125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 표제어와 어간\n",
-        "## 표제어 추출 lemmatization"
+        "## 코드 2-3. 표제어 추출(lemmatization): 단어를 표제어로 바꿉니다."
       ],
       "metadata": {
         "id": "FXUtQqdZAS8O"
@@ -135,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ld3N96X4_nxK",
-        "outputId": "b2c92740-b1b4-4238-b096-965f0637de01"
+        "outputId": "84bec165-5f41-4c45-8233-fff294c61f59"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +163,61 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 단어 분류하기: 품사 태깅 (part-of-speech (POS) tagging)"
+        "## 어간 추출(stemming)"
+      ],
+      "metadata": {
+        "id": "9fAsn_JILlZP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Porter 추출기 사용\n",
+        "\n",
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "from nltk.stem import PorterStemmer\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "stemmer = PorterStemmer()\n",
+        "\n",
+        "sentence = \"This was not the map we found in Billy Bones's chest, but an accurate copy, complete in all things--names and heights and soundings--with the single exception of the red crosses and the written notes.\"\n",
+        "tokenized_sentence = word_tokenize(sentence)\n",
+        "\n",
+        "print('어간 추출 전 :', tokenized_sentence)\n",
+        "print('어간 추출 후 :',[stemmer.stem(word) for word in tokenized_sentence])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pk7syyxYLlhY",
+        "outputId": "e182ea42-02d1-4d08-af0c-afcd9240fb09"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "어간 추출 전 : ['This', 'was', 'not', 'the', 'map', 'we', 'found', 'in', 'Billy', 'Bones', \"'s\", 'chest', ',', 'but', 'an', 'accurate', 'copy', ',', 'complete', 'in', 'all', 'things', '--', 'names', 'and', 'heights', 'and', 'soundings', '--', 'with', 'the', 'single', 'exception', 'of', 'the', 'red', 'crosses', 'and', 'the', 'written', 'notes', '.']\n",
+            "어간 추출 후 : ['thi', 'wa', 'not', 'the', 'map', 'we', 'found', 'in', 'billi', 'bone', \"'s\", 'chest', ',', 'but', 'an', 'accur', 'copi', ',', 'complet', 'in', 'all', 'thing', '--', 'name', 'and', 'height', 'and', 'sound', '--', 'with', 'the', 'singl', 'except', 'of', 'the', 'red', 'cross', 'and', 'the', 'written', 'note', '.']\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 코드 2-4. 품사 태깅 (part-of-speech (POS) tagging)"
       ],
       "metadata": {
         "id": "S2yEu3nJA2_s"
@@ -173,9 +236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "56ay-FHXAk4m",
-        "outputId": "22db4b7e-f4e0-4dcf-ba19-31630212d944"
+        "outputId": "a2649a08-4116-4a71-cb67-bc38248dd121"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,9 +257,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 청크 나누기(chunking)와 부문 구문 분석(shallow parsing)\n",
-        "## chunk: 하나의 의미가 있는 말 덩어리\n",
-        "# 개체명(named entity) 인식"
+        "## 코드 2-5. 명사구(NP) 부문 구문 분석"
       ],
       "metadata": {
         "id": "56EeZCXiA3Vw"
@@ -215,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fNvJZvMnBSG1",
-        "outputId": "0f6ad9c0-e2f3-4bb0-b2dd-7e14f1c01910"
+        "outputId": "5787ebf1-78a4-45c9-be40-9dad29579810"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
